[gd_scene load_steps=6 format=3 uid="uid://b5m5s850xbsrr"]

[ext_resource type="Script" path="res://Assets/Script/Class/Wolf/Wolf Alamanac/Index/Wolf_Almanac_Index_Page_4.gd" id="1_30lue"]
[ext_resource type="Texture2D" uid="uid://d04k2qksoa13u" path="res://Assets/Image/images/Background/Wolf Almanac Index/Wood Texture.png" id="2_11wv6"]
[ext_resource type="FontFile" uid="uid://b0dbrpth4h70i" path="res://Assets/Fonts/DisposableDroidBB_bldital.ttf" id="3_u4c0p"]
[ext_resource type="Theme" uid="uid://dk2f873t2ffc2" path="res://Assets/Theme/Wolf_Almanac_Idex/Button.tres" id="4_lfiul"]
[ext_resource type="AudioStream" uid="uid://dfx8n3eqhipk0" path="res://Assets/Music/All Button/Button.mp3" id="5_2ei4j"]

[node name="WolfAlamacIndexPage4" type="Node2D"]
script = ExtResource("1_30lue")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_11wv6")
expand_mode = 1

[node name="Tittle_Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -158.0
offset_right = 158.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_shadow_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_outline_color = Color(0.976471, 0.592157, 0.415686, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_u4c0p")
theme_override_font_sizes/font_size = 44
text = "Wolf Species List
"

[node name="Almanac Index" type="GridContainer" parent="Background"]
clip_contents = true
layout_direction = 1
layout_mode = 0
offset_left = 50.0
offset_top = 44.0
offset_right = 1236.0
offset_bottom = 661.0
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 3

[node name="WolfVBoxContainer10" type="VBoxContainer" parent="Background/Almanac Index"]
custom_minimum_size = Vector2(245, 245)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3

[node name="Wolf 10" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer10"]
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_10" type="Button" parent="Background/Almanac Index/WolfVBoxContainer10"]
layout_mode = 2
theme = ExtResource("4_lfiul")
theme_override_fonts/font = ExtResource("3_u4c0p")
theme_override_font_sizes/font_size = 24
text = "Wolf Label"
flat = true

[node name="WolfVBoxContainer11" type="VBoxContainer" parent="Background/Almanac Index"]
layout_mode = 2

[node name="Wolf 11" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer11"]
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_11" type="Button" parent="Background/Almanac Index/WolfVBoxContainer11"]
layout_mode = 2
theme = ExtResource("4_lfiul")
text = "Wolf Label"
flat = true

[node name="WolfVBoxContainer12" type="VBoxContainer" parent="Background/Almanac Index"]
layout_mode = 2

[node name="Wolf 12" type="TextureButton" parent="Background/Almanac Index/WolfVBoxContainer12"]
clip_contents = true
custom_minimum_size = Vector2(385, 555)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Label_Wolf_12" type="Button" parent="Background/Almanac Index/WolfVBoxContainer12"]
custom_minimum_size = Vector2(355, 24)
layout_mode = 2
theme = ExtResource("4_lfiul")
text = "Wolf Label"
flat = true

[node name="Back Button Page 3" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051
anchor_top = 0.886
anchor_right = 0.094
anchor_bottom = 0.931
offset_left = -0.280006
offset_top = 0.0799561
offset_right = -0.320007
offset_bottom = -0.320068
theme_override_fonts/font = ExtResource("3_u4c0p")
theme_override_font_sizes/font_size = 24
text = "Back
"
flat = true

[node name="Next Buttton Page 5" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.927
anchor_top = 0.886
anchor_right = 0.97
anchor_bottom = 0.931
offset_left = 0.439941
offset_top = 0.0799561
offset_right = -0.600098
offset_bottom = -0.320068
theme_override_fonts/font = ExtResource("3_u4c0p")
theme_override_font_sizes/font_size = 24
text = "Next"
flat = true

[node name="Page Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466
anchor_top = 0.901
anchor_right = 0.55
anchor_bottom = 0.935
offset_left = 11.52
offset_top = 1.27997
offset_right = -12.0
offset_bottom = -0.200073
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_u4c0p")
theme_override_font_sizes/font_size = 24
text = "Page 4 of 9"

[node name="Button_Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2ei4j")

[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer10/Wolf 10" to="." method="_on_great_plain_wolf_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer10/Label_Wolf_10" to="." method="_on_great_plain_wolf_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer11/Wolf 11" to="." method="_on_greenland_wolf_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer11/Label_Wolf_11" to="." method="_on_greenland_wolf_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer12/Wolf 12" to="." method="_on_himalayan_wolf_pressed"]
[connection signal="pressed" from="Background/Almanac Index/WolfVBoxContainer12/Label_Wolf_12" to="." method="_on_himalayan_wolf_pressed"]
[connection signal="pressed" from="Background/Back Button Page 3" to="." method="_on_back_button_page_3_pressed"]
[connection signal="pressed" from="Background/Next Buttton Page 5" to="." method="_on_next_button_page_4_pressed"]
